// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders properly 1`] = `
<ModuleContext>
  <Component
    context={
      Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_currentRenderer": Object {},
        "_currentValue": undefined,
        "_defaultValue": undefined,
      }
    }
  >
    <SubscribeWrap>
      <Component
        count="1"
      >
        1
      </Component>
    </SubscribeWrap>
    <Subscribe
      select="count"
      to={[Function]}
    >
      <SubscribeWrap>
        <Component
          count="1"
        >
          1
        </Component>
      </SubscribeWrap>
    </Subscribe>
  </Component>
</ModuleContext>
`;

exports[`unnamed context 1`] = `
<ModuleContext>
  <Component
    context={
      Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_currentRenderer": Object {},
        "_currentValue": undefined,
        "_defaultValue": undefined,
      }
    }
  >
    <SubscribeWrap>
      <Component
        context="1"
      >
        1
      </Component>
    </SubscribeWrap>
    <Subscribe
      select={[Function]}
      to={[Function]}
    >
      <SubscribeWrap>
        <Component
          context="1"
        >
          1
        </Component>
      </SubscribeWrap>
    </Subscribe>
  </Component>
</ModuleContext>
`;
